fotka přikotvená dolu

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     }
     .overlay {
       position: fixed;
-      top: 0;
+      bottom: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('sad.png') center/contain no-repeat;
+      background: url('sad.png') bottom center/contain no-repeat;
       background-size: contain;
-      background-position: center;
+      background-position: bottom center;
       z-index: 3;
       display: none;
     }
@@ -94,6 +94,8 @@
   </div>
 
   <script>
+    let noClickCount = 0; // Counter for 'Ne' button clicks
+
     function showMessage(answer) {
       const messageElement = document.getElementById('message');
       const noButton = document.getElementById('noButton');
@@ -107,13 +109,16 @@
       } else {
         messageElement.textContent = 'Ty nechceš být má bobulka?';
 
-        // Gradually fade out the 'Ne' button
-        const currentOpacity = parseFloat(window.getComputedStyle(noButton).opacity);
-        if (currentOpacity > 0) {
-          noButton.style.opacity = currentOpacity - 0.1;
-          if (noButton.style.opacity <= 0) {
-            noButton.style.display = 'none';
-          }
+        // Track the number of clicks
+        noClickCount++;
+
+        // Adjust opacity based on click count
+        const newOpacity = 1 - (noClickCount * 0.2);
+        noButton.style.opacity = newOpacity;
+
+        // Hide the button after 5 clicks
+        if (noClickCount >= 5) {
+          noButton.style.display = 'none';
         }
 
         // Change background color and show sad image overlay for 1.5 seconds
